--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -604,6 +604,7 @@ on property:sys.boot_completed=1
     #WDSP FW boot sysfs node used by STHAL
     chown media audio /sys/kernel/wdsp0/boot
     chown media audio /sys/kernel/wcd_cpe0/fw_na
+    start vendor.xperience-post-boot
 
 #bug156417 zhaoqf_sh add Allow usb charging to be disabled peristently
 on property:persist.sys.chgdisabled=1
@@ -951,6 +952,7 @@ on charger
     setprop persist.sys.usb.config mass_storage
     start vendor.hvdcp_opti
     start vendor.thermal-engine
+    start vendor.xperience-post-boot
 
 service vendor.hbtp /vendor/bin/hbtp_daemon
     class main
