--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -811,26 +811,26 @@ on property:persist.sys.fp.vendor=switchf
     setprop fpc.fp.miui.token 0
     setprop ro.boot.fpsensor fpc
     setprop ro.hardware.fingerprint searchf
-    start fps_hal
+    start vendor.fps_hal
 
 on property:persist.sys.fp.vendor=searchf
     stop vendor.gx_fpd
     setprop persist.sys.fp.vendor searchf
     setprop ro.boot.fpsensor fpc
     setprop ro.hardware.fingerprint searchf
-    start fps_hal
+    start vendor.fps_hal
 
 on property:persist.sys.fp.vendor=goodix
     setprop ro.boot.fpsensor gdx
     setprop ro.hardware.fingerprint goodix
-    start fps_hal
+    start vendor.fps_hal
 
 on property:sys.fp.onstart=1
    setprop goodix.fp.miui.analyse 1
    setprop goodix.fp.miui.token 0
    setprop ro.boot.fpsensor gdx
    setprop ro.hardware.fingerprint goodix
-   start fps_hal
+   start vendor.fps_hal
 
 # Start camera server as daemon
 service vendor.qcamerasvr /vendor/bin/mm-qcamera-daemon
