--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -327,8 +327,16 @@
 /sys/devices/soc/soc:fpc1020		hw_reset			0660   system     system
 /sys/devices/soc/soc:fpc1020		irq	        		0660   system     system
 /sys/devices/soc/soc:fpc1020      	wakeup_enable	        	0660   system     system
+/sys/devices/soc/soc:fpc1020            spi_prepare                     0660   system     system
 /sys/devices/soc/soc:fpc1020      	compatible_all	        	0660   system     system
 /sys/devices/soc/soc:fpc1020            fingerdown_wait                 0660   system     system
+/sys/devices/platform/soc/soc:fpc1020   hw_reset                        0660   system     system
+/sys/devices/platform/soc/soc:fpc1020   irq                             0660   system     system
+/sys/devices/platform/soc/soc:fpc1020   wakeup_enable                   0660   system     system
+/sys/devices/platform/soc/soc:fpc1020   spi_prepare                     0660   system     system
+/sys/devices/platform/soc/soc:fpc1020   compatible_all                  0660   system     system
+/sys/devices/platform/soc/soc:fpc1020   fingerdown_wait                 0660 system system
+
 
 # lirc
 /dev/lirc0                0660   system     system
